--- a/pom.xml
+++ b/pom.xml
@@ -32,11 +32,11 @@
 
   <dependencies>
     <dependency>
-        <groupId>org.testng</groupId>
-        <artifactId>testng</artifactId>
-        <version>6.11</version>
-        <scope>test</scope>
-    </dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
     <dependency>
     	<groupId>com.experitest</groupId>
     	<artifactId>seetest-client</artifactId>
