--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
             </releases>
             <id>Experitest.repo1</id>
             <name>Jonathan</name>
-            <url>https://cloud.experitest.com/repo/</url>
+            <url>http://192.168.2.1:9192/repo/</url>
             <layout>default</layout>
         </repository>
     </repositories>
@@ -38,9 +38,10 @@
 			<scope>test</scope>
 		</dependency>
     <dependency>
-    	<groupId>com.experitest</groupId>
-    	<artifactId>seetest-client</artifactId>
-    	<version>11.6</version>
+			<groupId>io.appium</groupId>
+			<artifactId>java-client</artifactId>
+			<version>5.0.4</version>
     </dependency>
   </dependencies>
+  
 </project>
