--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	<maven.compiler.source>1.7</maven.compiler.source>
+	<maven.compiler.target>1.7</maven.compiler.target>
   </properties>
 
 
@@ -24,7 +26,7 @@
             </releases>
             <id>Experitest.repo1</id>
             <name>Jonathan</name>
-            <url>http://192.168.2.1:9192/repo/</url>
+            <url>https://cloud.experitest.com/repo/</url>
             <layout>default</layout>
         </repository>
     </repositories>
