--- a/pom.xml
+++ b/pom.xml
@@ -10,22 +10,6 @@
   <name>Jenkins_Demo</name>
   <url>http://maven.apache.org</url>
   
-  <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.21.0</version>
-          <configuration>
-          	<parallel>methods</parallel>
-          	<threadCount>10</threadCount>
-          </configuration>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
-
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	<maven.compiler.source>1.7</maven.compiler.source>
@@ -59,6 +43,11 @@
 			<groupId>io.appium</groupId>
 			<artifactId>java-client</artifactId>
 			<version>5.0.4</version>
+    </dependency>
+    <dependency>
+			<groupId>com.experitest</groupId>
+			<artifactId>appium-seetest-extension</artifactId>
+			<version>11.7</version>
     </dependency>
   </dependencies>
   
