--- a/pom.xml
+++ b/pom.xml
@@ -50,5 +50,17 @@
 			<version>11.7</version>
     </dependency>
   </dependencies>
+<build>
+  <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>2.12</version>
+    <configuration>
+      <suiteXmlFiles>
+        <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
+      </suiteXmlFiles>
+    </configuration>
+  </plugin>
+</build>
   
 </project>
