--- a/pom.xml
+++ b/pom.xml
@@ -50,8 +50,9 @@
 			<version>11.7</version>
     </dependency>
   </dependencies>
-<build>
-  <plugin>
+  <build>
+<plugins>
+ <plugin>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-surefire-plugin</artifactId>
     <version>2.12</version>
@@ -61,6 +62,7 @@
       </suiteXmlFiles>
     </configuration>
   </plugin>
+</plugins>
 </build>
   
 </project>
