--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
     <version>2.12</version>
     <configuration>
       <suiteXmlFiles>
-        <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
+        <suiteXmlFile>testng.xml</suiteXmlFile>
       </suiteXmlFiles>
     </configuration>
   </plugin>
