--- a/pom.xml
+++ b/pom.xml
@@ -34,11 +34,11 @@
 
   <dependencies>
     <dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>test</scope>
-		</dependency>
+    	<groupId>org.testng</groupId>
+    	<artifactId>testng</artifactId>
+    	<version>6.14.3</version>
+    	<scope>test</scope>
+	</dependency>
     <dependency>
 			<groupId>io.appium</groupId>
 			<artifactId>java-client</artifactId>
